@@ -160,6 +160,8 @@
 94. If compiled with both ffmpeg and mpg123, then prefer mpg123 for mp3 files
     if ffmpeg does not have mp3float codec.
 95. Remove duplicates from dynamic rules.
+96. Add an 'Add' button to dynamic rule dialog, so that multiple rules may be
+    created without closing dialog.
 
 0.9.2
 -----
